# db-admin-platform

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_connections.py  0003_audit_logs.py  0004_connection_database_optional.py  0005_access_grants.py  0006_grant_multi_scope.py  0007_audit_ip_address.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: access.py  audit.py  auth.py  connections.py  deps.py  errors.py  health.py  middleware.py  query.py  router.py  schema.py  sessions.py  users.py  ws_query.py
backend/app/auth/: dependencies.py  roles.py  tokens.py
backend/app/core/: config.py  context.py  exceptions.py  logging.py
backend/app/db/: base.py  engines.py  session.py
backend/app/models/: __init__.py  access_grant.py  audit.py  connection.py  user.py
backend/app/schemas/: access.py  audit.py  auth.py  connection.py  metadata.py  query.py  session.py  user.py
backend/app/security/: encryption.py  key_manager.py  password.py
backend/app/services/: access_control.py  audit_service.py  audit_sink.py  connection_service.py  metadata_service.py  orchestrator.py  query_engine.py  sql_guard.py  sql_introspect.py  sql_script_analyzer.py  (+1 more)
backend/tests/: conftest.py  fakes.py  test_access_api.py  test_access_control.py  test_adapters.py  test_adapters_live.py  test_audit.py  test_auth.py  test_connections.py  test_encryption.py  test_foundation.py  test_orchestrator.py  test_query_api.py  test_query_engine.py  test_schema_api.py  test_script_and_perms.py  test_server_level.py  test_shared_access.py  test_sql_guard.py  test_sql_introspect.py  test_sql_script_analyzer.py  test_ws_query.py
(+72 files in other folders)
